--- a/cv-html.html
+++ b/cv-html.html
@@ -126,7 +126,7 @@
             <img src="image/PROFIL.jpg" alt="profil" class="profil-pic">
             <h1>Nkwel Corneille Stephane</h1>
             <p class="contact-info">
-                Abidjan | nkwelcorneille777@outlook.fr | +225 0757471552
+                Abidjan | nkwelcorneille7@gmail.com | +225 0757471552
             </p>
             <p><strong>Développeur Web Frontend </strong></p>
         </header>
