--- a/cv-html.html
+++ b/cv-html.html
@@ -135,7 +135,8 @@
             <h2>Profil</h2>
             <p>
                 Professionnel polyvalent avec une solide expérience en gestion d'équipe et relation client, 
-                 reconvertit vers le développement web frontend. Fort de compétences en leadership 
+                J'ai fait une transition professionnelle vers le développement d'interfaces utilisateur web. 
+                Fort de compétences en leadership 
                 et en résolution de problèmes acquises dans le commerce et la restauration, je combine créativité 
                 technique et sens du service pour créer des expériences utilisateur innovantes.
             </p>
