--- a/cv-html.html
+++ b/cv-html.html
@@ -167,8 +167,7 @@
                     <ul>
                         <li>Agile</li>
                         <li>Scrum</li>
-                        <li>Responsive Design</li>
-                        <li>UX/UI</li>
+                        
                     </ul>
                 </div>
             </div>
@@ -220,7 +219,7 @@
             <div class="formation">
                 <p class="experience-title">Genie Electrique </p>
                 <p class="experience-company">IUT DE DOUALA</p>
-                <p class="experience-date">2013-2015</p>
+                <p class="experience-date">2013-2016 LICENCE 3</p>
             </div>
         </section>
 
